correção do retorno do método getRequiredFieldAnnotatedAs e adição de tratamento de mais tipos no método getValueAsFieldType